# recovery

./: .gitignore  README.md
backend/: .gitignore  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
backend/src/: app.module.ts  main.ts
backend/src/lib/: corsOrigins.ts
backend/src/recovery/: recovery.controller.ts  recovery.module.ts  recovery.service.ts
backend/src/recovery/dto/: create-galaxy.dto.ts
backend/src/recovery/entities/: Galaxy.entity.ts  GuardiansOfTheGalaxy.entity.ts
backend/src/recovery/services/: email.service.ts  stellar.service.ts
crossmint-smart-accounts/: .gitignore  Cargo.toml  LICENSE  README.md
crossmint-smart-accounts/.github/workflows/: lint.yml  release.yml  test.yml
crossmint-smart-accounts/contracts/contract-factory/: Cargo.toml
crossmint-smart-accounts/contracts/contract-factory/src/: lib.rs  test.rs  test_constants.rs
crossmint-smart-accounts/contracts/examples/plugin-policy-example/: Cargo.toml
crossmint-smart-accounts/contracts/examples/plugin-policy-example-reverts/: Cargo.toml
crossmint-smart-accounts/contracts/examples/plugin-policy-example-reverts/src/: lib.rs
crossmint-smart-accounts/contracts/examples/plugin-policy-example/src/: lib.rs
crossmint-smart-accounts/contracts/initializable/: Cargo.toml
crossmint-smart-accounts/contracts/initializable/src/: lib.rs  test.rs
crossmint-smart-accounts/contracts/smart-account/: Cargo.toml  README.md
crossmint-smart-accounts/contracts/smart-account-interfaces/: Cargo.toml
crossmint-smart-accounts/contracts/smart-account-interfaces/src/: lib.rs  plugin.rs  policy.rs
crossmint-smart-accounts/contracts/smart-account/src/: account.rs  config.rs  constants.rs  error.rs  events.rs  interface.rs  lib.rs  plugin.rs  utils.rs
crossmint-smart-accounts/contracts/smart-account/src/auth/: mod.rs  permissions.rs  proof.rs  signer.rs
crossmint-smart-accounts/contracts/smart-account/src/auth/core/: authorizer.rs
crossmint-smart-accounts/contracts/smart-account/src/auth/policy/: external.rs  interface.rs  mod.rs  time_based.rs
crossmint-smart-accounts/contracts/smart-account/src/auth/signers/: ed25519.rs  mod.rs  secp256r1.rs
crossmint-smart-accounts/contracts/smart-account/src/tests/: admin_downgrade_test.rs  auth_test.rs  mod.rs  plugin_test.rs  policy_test.rs  secp256r1_signer_test.rs  signer_management_test.rs  test_utils.rs
crossmint-smart-accounts/contracts/storage/: Cargo.toml
crossmint-smart-accounts/contracts/storage/src/: lib.rs  test.rs
crossmint-smart-accounts/contracts/testing/hello-world/src/: lib.rs
crossmint-smart-accounts/contracts/upgradeable/: Cargo.toml
crossmint-smart-accounts/contracts/upgradeable/src/: lib.rs
crossmint-smart-accounts/security/: scout-report.md  threat-model.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/balance/: page.tsx
frontend/src/app/guardians/: page.tsx
frontend/src/app/recover/: page.tsx
frontend/src/app/recuperator/: page.tsx
frontend/src/components/: AppRouter.tsx  BalancePage.tsx  GuardianForm.tsx  GuardianList.tsx  GuardianSelectionPage.tsx  Layout.tsx  kit.ts  navBar.tsx
frontend/src/lib/: api.ts  axios.ts  stellar.ts  updateSigners.ts
frontend/src/types/: guardian.ts
frontend_estilo/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend_estilo/src/: App.tsx  index.css
frontend_estilo/src/actions/: config.ts  crossmint-provider.tsx  getGuardians.ts  index.ts  stellar-actions.ts  types.ts  use-crossmint-auth.ts
frontend_estilo/src/components/: AddGuardiansScreen.tsx  GuardianManagementScreen.tsx  GuardianNotificationScreen.tsx  GuardianSelectionScreen.tsx  Layout.tsx  LoadingScreen.tsx  LostAccessScreen.tsx  OnboardingScreen.tsx  ProtectedRoute.tsx  RecoveryCompleteScreen.tsx  RecoveryProgressScreen.tsx  RecoveryRequestSentScreen.tsx  ResponsiveCard.tsx  ResponsiveWrapper.tsx  WalletDashboard.tsx
frontend_estilo/src/contexts/: AuthContext.tsx
frontend_estilo/src/styles/: globals.css
(+20 files in other folders)
