[package]
name = "plugin-policy-example-reverts"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
smart-account-interfaces = { path = "../../smart-account-interfaces" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
